# sonari

./: .gitignore  Dockerfile  Makefile  README.md  annotate_view_new.csv  annotate_view_old.csv  annotation_project_detail_new.csv  annotation_project_list_new.csv  annotation_projectdetail_old.csv  annotation_projectslist_old.csv  changelog.md  clips_table_new.csv  clips_table_old.csv
back/: AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  app.py  mkdocs-guide.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
back/docs/: README.md  sponsors.md
back/docs/developer_guide/: api.md  index.md  quickstart.md
back/docs/reference/: api.md  models.md  schemas.md
back/docs/user_guide/: annotation_projects.md  datasets.md  evaluation.md  exploration.md  faq.md  index.md  installation.md
back/src/sonari/: __init__.py  __main__.py  app.py  exceptions.py  plugins.py  shared_cache_global.py
back/src/sonari/api/: __init__.py  annotation_projects.py  annotation_tasks.py  audio.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  datasets.py  evaluation_sets.py  evaluations.py  features.py  model_runs.py  notes.py  psd.py  recordings.py  sessions.py  sound_event_annotations.py  sound_event_evaluations.py  sound_event_predictions.py  sound_events.py  spectrograms.py  tags.py  user_runs.py  users.py
back/src/sonari/cli/: __init__.py  __main__.py  create_app_token.py
back/src/sonari/core/: __init__.py  common.py  images.py  psd.py  spectrograms.py
back/src/sonari/exports/: __init__.py  constants.py  router.py
back/src/sonari/filters/: annotation_projects.py  annotation_tasks.py  base.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  datasets.py  evaluation_sets.py  evaluations.py  feature_names.py  model_runs.py  notes.py  recording_tags.py  recordings.py  sound_event_annotations.py  sound_event_evaluations.py  sound_event_predictions.py  sound_events.py  tags.py  user_runs.py
back/src/sonari/migrations/: env.py  script.py.mako
back/src/sonari/models/: __init__.py  annotation_project.py  annotation_task.py  app_token.py  base.py  clip.py  clip_annotation.py  clip_evaluation.py  clip_prediction.py  dataset.py  evaluation.py  evaluation_set.py  event_handlers.py  feature.py  model_run.py  note.py  recording.py  sound_event.py  sound_event_annotation.py  sound_event_evaluation.py  sound_event_prediction.py  tag.py  token.py  user.py  user_run.py
back/src/sonari/routes/: __init__.py  annotation_projects.py  annotation_tasks.py  audio.py  auth.py  clip_annotations.py  clip_evaluations.py  clip_predictions.py  clips.py  datasets.py  evaluation_sets.py  evaluations.py  export.py  export.py.backup  features.py  model_runs.py  notes.py  plugins.py  psd.py  recordings.py  sound_event_annotations.py  tags.py  (+7 more)
back/tests/: README.md  __init__.py  conftest.py  pytest_config.toml.example  test_annotation_projects.py  test_annotation_tasks.py  test_audio.py  test_auth.py  test_datasets.py  test_export.py  test_notes.py  test_psd.py  test_recordings.py  test_sound_event_annotations.py  test_spectrograms.py  test_tags.py  test_users.py  test_waveforms.py
back/tests/api/: test_api_annotation_tasks.py  test_api_datasets.py  test_api_recordings.py  test_base.py  test_utils.py
back/tests/exports/: conftest.py  test_extractors.py  test_query_builder.py
back/tests/routes/: test_annotation_projects.py  test_annotation_tasks.py  test_app_tokens.py  test_audio.py  test_datasets.py  test_features.py  test_notes.py  test_psd.py  test_recordings.py  test_sound_event_annotations.py  test_spectrograms.py  test_users.py  test_validation.py  test_waveforms.py
back/tests/test_api/: test_annotation_projects.py  test_audio.py  test_clip_annotations.py  test_clips.py  test_datasets.py  test_features.py  test_notes.py  test_recordings.py  test_sound_event_annotations.py  test_sound_events.py  test_tags.py  test_users.py
back/tests/test_core/: test_files.py
back/tests/test_database/: test_database.py  test_migrations.py
back/tests/test_filters/: test_note_filters.py  test_recording_filters.py  test_tag_filters.py
back/tests/test_routers/: conftest.py  test_auth.py  test_sound_event_annotations.py
(+502 files in other folders)
