[project]
name = "Sonari"
version = "2025.10.1"
description = "Audio Annotation Tool"
authors = [{ name = "Santiago Martinez", email = "santiago.mbal@gmail.com" }, { name = "Artur Sterz", email = "sterz@trackit.systems" }]
dependencies = [
    "uvicorn[standard]>=0.34.3",
    "aiosqlite>=0.21.0",
    "passlib>=1.7.4",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "cachetools>=5.5.2", # asyncache does not work with 6.* versions, yet
    "asyncache>=0.3.1",
    "fastapi-pagination>=0.13.1",
    "alembic>=1.16.1",
    "bcrypt==4.3.0",
    "colorama>=0.4.6",
    "openpyxl>=3.1.5",
    "astral>=3.2",
    "soundfile==0.13.1",
    "soundevent==2.5.0",
    "xarray==2025.4.0",
    "scipy==1.15.3",
    "shapely==2.1.1",
    "matplotlib==3.10.3",
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
keywords = ["audio", "annotation", "tool", "bioacoustics", "machine learning"]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/trackIT-Systems/sonari"
Documentation = "https://github.com/trackIT-Systems/sonari"
"Isue Tracker" = "https://github.com/trackIT-Systems/sonari/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["src/sonari/migrations/versions/", "src/sonari/statics/"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pydocstyle]
convention = "numpy"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "sonari"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "flake8>=7.2.0",
    "pyright>=1.1.401",
    "ruff>=0.11.12",
    "icecream>=2.1.4",
    "crowsetta==5.1.0",
    "cython==3.1.1",
    "importlib-resources==6.5.2",
    "scikit-learn==1.6.1",
    "rasterio>=1.4.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
postgres = ["asyncpg>=0.30.0", "psycopg2-binary>=2.9.10"]
