[project]
name = "Sonari"
version = "2026.2.6"
description = "Audio Annotation Tool"
authors = [{ name = "Santiago Martinez", email = "santiago.mbal@gmail.com" }, { name = "Artur Sterz", email = "sterz@trackit.systems" }, { name = "Melli Morch", email = "morch@trackit.systems" }]
dependencies = [
    "uvicorn[standard]==0.41.0",
    "aiosqlite==0.22.1",
    "passlib==1.7.4",
    "fastapi==0.133.1",
    "pydantic-settings==2.13.1",
    "cachetools==7.0.1",
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "colorama==0.4.6",
    "openpyxl==3.1.5",
    "astral==3.2",
    "soundfile==0.13.1",
    "soundevent==2.10.0",
    "xarray==2026.2.0",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "pyjwt[crypto]==2.11.0",
    "python-multipart==0.0.22",
    "fastapi-users[sqlalchemy]==15.0.4",
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
keywords = ["audio", "annotation", "tool", "bioacoustics", "machine learning"]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/trackIT-Systems/sonari"
Documentation = "https://github.com/trackIT-Systems/sonari"
"Isue Tracker" = "https://github.com/trackIT-Systems/sonari/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["src/sonari/migrations/versions/", "src/sonari/statics/"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.isort]
known-local-folder = ["src", "sonari"]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pyright==1.1.408",
    "ruff==0.15.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
postgres = ["asyncpg==0.31.0", "psycopg2-binary==2.9.11"]
